--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>17 - Haunted House</title>
+    <title>A purple portal</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <canvas class="webgl"></canvas>
+    <h1>Hold your left click to see a new world</h1>
     <script type="module" src="./script.js"></script>
 </body>
 </html>
